...
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
            <AutoCompleteTextView
                android:id="@+id/list_autocomplete_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:text="Select your room"
                android:textColor="@android:color/black"
                style="@style/Widget.AppCompat.Spinner.DropDown.ActionBar"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_margin="20dp">
        <Button
            android:id="@+id/button_filter"
            android:layout_gravity="end"
            android:text="Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
   </LinearLayout>
...
