<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_baseline_filter_list__white24"
        app:showAsAction="always"
        android:title="Filter">
    </item>
</menu>