<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/coordinator"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Create your meeting !"
            android:elevation="16dp"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            />
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:clipToPadding="false"
        android:paddingBottom="80dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ui.AddMeetingActivity">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="left"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="left"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Meeting time"
                        android:textSize="20dp"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:layout_marginBottom="16dp"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/add_hours_info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="12"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="h - "/>
                        <TextView
                            android:id="@+id/add_minute_info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="00"/>
                        <Button
                            android:id="@+id/add_change_hours"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:backgroundTint="@android:color/transparent"
                            android:drawableEnd="@android:drawable/ic_input_add"
                            style="?android:attr/borderlessButtonStyle"
                            android:elevation="0dp"
                            android:drawableTint="@color/colorPrimary"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="left"
                android:layout_marginTop="16dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="left">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="About"
                        android:textSize="20dp"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:layout_marginBottom="16dp"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/outlinedTextField"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:hint="Enter the subject of the meeting"
                            android:textColor="@android:color/black"
                            android:backgroundTint="@color/colorPrimary"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/about_add_meeting"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxLength="25"
                                />

                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start"
                android:layout_marginTop="16dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="left">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Users list"
                        android:textSize="20dp"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">
                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/chipsUsers"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:padding="5dp"
                            app:chipSpacingHorizontal="10dp"
                            app:singleSelection="false">
                            <!-- Chips can be declared here, or added dynamically. -->
                        </com.google.android.material.chip.ChipGroup>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="left">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Room"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="@android:color/black"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingLeft="50dp"
                android:paddingRight="50dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_room"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                    <AutoCompleteTextView
                        android:id="@+id/list_autocomplete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:text="Select your room"
                        android:textColor="@android:color/black"
                        style="@style/Widget.AppCompat.Spinner.DropDown.ActionBar"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:id="@+id/view_bottom"/>
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|center"
        android:contentDescription="add"
        android:text="Add meeting"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        app:icon="@drawable/ic_baseline_create_24"
        app:iconTint="@android:color/white"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>